--- a/hello.html
+++ b/hello.html
@@ -10,5 +10,6 @@
     <h1>Hello World</h1>
     <h2>Myself Arjun Kadivar</h2>
     <h3>How are you all</h3>
+    <p> new line in our file!</p>
 </body>
 </html>
