Added an image and modified a file in branch

--- a/hello.html
+++ b/hello.html
@@ -11,5 +11,6 @@
     <h2>Myself Arjun Kadivar</h2>
     <h3>How are you all</h3>
     <p> new line in our file!</p>
+    <img src="nature.jpg">
 </body>
 </html>
